# checkers

cPlusPlus/: Board.cpp  Board.h  CMakeLists.txt  game_Game.cpp  game_Game.h
checkers_java/src/: Main.java
checkers_java/src/frame/: Frame.java
checkers_java/src/game/: Game.java
checkers_java/src/test/: GameTest.java
checkers_java/src/util/: Pair.java  Piece.java
